crates/ruff_python_parser/tests/snapshots/invalid_syntax@match_classify_as_keyword_or_identifier.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/err/match_classify_as_keyword_or_identifier.py
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(
            "_",
        ),
        range: 0..39,
        body: [
            Match(
                StmtMatch {
                    node_index: NodeIndex(
                        "_",
                    ),
                    range: 0..38,
                    subject: Starred(
                        ExprStarred {
                            node_index: NodeIndex(
                                "_",
                            ),
                            range: 6..10,
                            value: Name(
                                ExprName {
                                    node_index: NodeIndex(
                                        "_",
                                    ),
                                    range: 7..10,
                                    id: Name("foo"),
                                    ctx: Load,
                                },
                            ),
                            ctx: Load,
                        },
                    ),
                    cases: [
                        MatchCase {
                            range: 27..38,
                            node_index: NodeIndex(
                                "_",
                            ),
                            pattern: MatchAs(
                                PatternMatchAs {
                                    range: 32..33,
                                    node_index: NodeIndex(
                                        "_",
                                    ),
                                    pattern: None,
                                    name: None,
                                },
                            ),
                            guard: None,
                            body: [
                                Expr(
                                    StmtExpr {
                                        node_index: NodeIndex(
                                            "_",
                                        ),
                                        range: 35..38,
                                        value: EllipsisLiteral(
                                            ExprEllipsisLiteral {
                                                node_index: NodeIndex(
                                                    "_",
                                                ),
                                                range: 35..38,
                                            },
                                        ),
                                    },
                                ),
                            ],
                        },
                    ],
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | match *foo:  # Keyword
  |       ^^^^ Syntax Error: Starred expression cannot be used here
2 |     case _: ...
  |
